kubernetes/development/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: solar-system
  namespace: _{_NAMESPACE_}_
  labels:
    app: solar-system
spec:
  ports:
  - port: 3000
    targetPort: 3000
    protocol: TCP
    name: http
  type: NodePort
  selector:
    app: solar-system
